--- a/.envrc
+++ b/.envrc
@@ -1,6 +1,8 @@
 set -eu
 set -o pipefail
 
+echo 'version = 4' > Cargo.lock
+echo 'package = []' >> Cargo.lock
 nix run .\#update-cargo-toml --show-trace
 nix flake update
 nix flake check
@@ -9,3 +11,4 @@ use flake
 find . -name '*.rs' | xargs rustfmt --edition 2024
 cargo clean
 cargo update
+nix run .\#update-cargo-toml --show-trace
