--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sigma-types"
-version = "0.1.3"
+version = "0.1.4"
 edition = "2024"
 publish = true
 authors = [ "Will Sturgeon" ]
@@ -14,8 +14,13 @@ categories = [ "data-structures", "development-tools", "mathematics", "no-std", 
 
 [dependencies]
 
+malachite-base = { version = "=0.4.16", default-features = false, features = [  ], optional = true }
+
 [dev-dependencies]
 quickcheck = { version = "=1.0.3", default-features = false, features = [  ] }
+
+[features]
+malachite = [ "dep:malachite-base" ]
 
 [lints.rust]
 abi-unsupported-vector-types = "deny"
