Hopefully fix a `miri` quirk that shows up in CI only

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,5 +47,6 @@ jobs:
 
     - name: Cargo (miri)
       run: |
+        sed -i 's/.*2021.*//g' Cargo.toml
         sed -i 's/2024/2021/g' Cargo.toml
         nix run .\#miri
