--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sigma-types"
-version = "0.1.8"
+version = "0.1.9"
 edition = "2024"
 publish = true
 authors = [ "Will Sturgeon" ]
@@ -24,6 +24,7 @@ serde_json = { version = "=1.0.134", default-features = false, features = [ "std
 [features]
 malachite = [ "dep:malachite-base" ]
 serde = [ "dep:serde" ]
+std = [  ]
 
 [lints.rust]
 abi-unsupported-vector-types = "deny"
