Warn (not deny) on `tail-expr-drop-order` (edition 2021)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -181,7 +181,7 @@ special-module-name = "deny"
 stable-features = "deny"
 static-mut-refs = "deny"
 suspicious-double-ref-op = "deny"
-tail-expr-drop-order = "deny"
+tail-expr-drop-order = "warn"
 test-unstable-lint = "deny"
 text-direction-codepoint-in-comment = "deny"
 text-direction-codepoint-in-literal = "deny"
