Actually change `quickcheck`'s url by using the correct tag, `git`, instead of `url`

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sigma-types"
-version = "0.2.5"
+version = "0.2.6"
 edition = "2024"
 publish = true
 authors = [ "Will Sturgeon" ]
@@ -15,12 +15,12 @@ categories = [ "data-structures", "development-tools", "mathematics", "no-std", 
 [dependencies]
 
 malachite-base = { version = "=0.4.16", default-features = false, features = [  ], optional = true }
-quickcheck = { version = "=1.0.3", default-features = false, features = [  ], optional = true }
+quickcheck = { version = "=1.0.3", default-features = false, features = [  ], git = "https://github.com/neithernut/quickcheck.git", optional = true }
 serde = { version = "=1.0.217", default-features = false, features = [  ], optional = true }
 
 [dev-dependencies]
-quickcheck = { version = "=1.0.3", default-features = false, features = [  ], url = "github:neithernut/quickcheck" }
-serde_json = { version = "=1.0.134", default-features = false, features = [ "std" ] }
+quickcheck = { version = "=1.0.3", default-features = false, features = [  ], git = "https://github.com/neithernut/quickcheck.git" }
+serde_json = { version = "=1.0.135", default-features = false, features = [ "std" ] }
 
 [features]
 malachite = [ "dep:malachite-base" ]
