Full range of basic arithmetic operations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "sigma-types"
-version = "0.3.0"
+version = "0.3.1"
 edition = "2024"
 publish = true
 authors = [ "Will Sturgeon" ]
@@ -19,7 +19,9 @@ quickcheck = { version = "=1.0.3", default-features = false, features = [  ], op
 serde = { version = "=1.0.217", default-features = false, features = [  ], optional = true }
 
 [dev-dependencies]
+paste = { version = "=1.0.15", default-features = false, features = [  ] }
 quickcheck = { version = "=1.0.3", default-features = false, features = [  ] }
+quickcheck_macros = { version = "=1.0.0", default-features = false, features = [  ] }
 serde_json = { version = "=1.0.135", default-features = false, features = [ "std" ] }
 
 [features]
